# spektr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  uninstall.sh
.github/workflows/: release.yml
homebrew/: spektr.rb
scoop/: spektr.json
src/: main.rs
src/scanner/: mod.rs  strategy.rs
src/tui/: app_state.rs  events.rs  layout.rs  mod.rs  tree.rs  widgets.rs
