[package]
name = "spektr"
version = "0.1.0"
edition = "2021"
authors = ["JCyrus"]
description = "A blazing-fast TUI utility for cleaning development artifacts"
license = "MIT"
repository = "https://github.com/jcyrus/spektr"
keywords = ["cli", "tui", "developer-tools", "cleanup"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# File System
jwalk = "0.8"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Error Handling & Serialization
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI Parsing
clap = { version = "4", features = ["derive"] }

# Utilities
num_cpus = "1"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
strip = true         # Strip symbols

